<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Code Library</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_info">About Me</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_change_theme">Dark Theme</string>
    <string name="dev_name">"Krishna"</string>
    <string name="dev_mail">balkrishnaswami22@gmail.com</string>
    <string name="menu_notifications">Notifications</string>
    <string name="simple_noti">Simple Notification</string>
    <string name="big_text_noti">Big Text Notification</string>
    <string name="big_pict_noti">Big Picture Notification</string>
    <string name="inbox_noti">Inbox Style Notification</string>
    <string name="reply_noti">Reply Notification</string>
    <string name="headsup_noti">HeadsUp Notification</string>
    <string name="message_noti">Message Style Notification</string>
    <string name="remote_noti">Remoteview Notification</string>
    <string name="progress_noti">ProgressBar Notification</string>
    <string name="menu_exoplayer">ExoPlayer</string>
    <string name="menu_pagination">Jetpack Pagination</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //exoplayer
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>

    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>

    <string name="download_start_error">Failed to start download</string>

    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>

    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>

    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>

    <string name="download_ads_unsupported">IMA does not support offline ads</string>

    <string name="prefer_extension_decoders">Prefer extension decoders</string>
    <string name="menu_architectures">Architectures</string>
    <string name="simple_mvvm">Basic MVVM</string>
    <string name="simple_mvp">Basic MVP</string>
    <string name="simple_mvc">Basic MVC</string>
    <string name="menu_room">Jetpack Room</string>

    <string name="poster">poster</string>
    <string name="best_rated">Best Rated</string>
    <string name="new_videos">New Videos</string>
    <string name="new_releasees">New Releasees</string>

</resources>