<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.krys.codelibrary.ui.welcome.WelcomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.krys.codelibrary.ui.notifications.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_jpagination"
        android:name="com.krys.codelibrary.ui.pagination.PaginationFragment"
        android:label="@string/menu_pagination"
        tools:layout="@layout/fragment_pagination" />

    <fragment
        android:id="@+id/nav_exoplayer"
        android:name="com.krys.codelibrary.ui.exoplayer.PlayerFragment"
        android:label="@string/menu_exoplayer"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/nav_architectures"
        android:name="com.krys.codelibrary.ui.arcitecture.ArchitecturesFragment"
        android:label="@string/menu_architectures"
        tools:layout="@layout/fragment_architectures" />

    <fragment
        android:id="@+id/fragment_mvvm"
        android:name="com.krys.codelibrary.ui.mvvm.MVVMFragment"
        android:label="@string/simple_mvvm"
        tools:layout="@layout/fragment_mvvm" />

    <fragment
        android:id="@+id/fragment_mvp"
        android:name="com.krys.codelibrary.ui.mvp.MVPFragment"
        android:label="@string/simple_mvp"
        tools:layout="@layout/fragment_mvp" />

    <fragment
        android:id="@+id/fragment_mvc"
        android:name="com.krys.codelibrary.ui.mvc.MVCFragment"
        android:label="@string/simple_mvc"
        tools:layout="@layout/fragment_mvc" />

    <fragment
        android:id="@+id/nav_jroom"
        android:name="com.krys.codelibrary.ui.room.RoomFragment"
        android:label="@string/menu_room"
        tools:layout="@layout/fragment_room" />

</navigation>