<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_jpagination"
            android:icon="@drawable/ic_baseline_dynamic_feed_24"
            android:title="@string/menu_pagination" />
        <item
            android:id="@+id/nav_jroom"
            android:icon="@drawable/ic_outline_cloud_off_24"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_exoplayer"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/menu_exoplayer" />
        <item
            android:id="@+id/nav_architectures"
            android:icon="@drawable/ic_baseline_art_track_24"
            android:title="@string/menu_architectures" />

    </group>

</menu>