<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.arcitecture.ArchitecturesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.krys.codelibrary.customviews.BoldButton
            android:id="@+id/btnSimpleMVVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:text="@string/simple_mvvm" />
        <com.krys.codelibrary.customviews.BoldButton
            android:id="@+id/btnSimpleMVP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:text="@string/simple_mvp" />
        <com.krys.codelibrary.customviews.BoldButton
            android:id="@+id/btnSimpleMVC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:text="@string/simple_mvc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>